# modern-gopher

./: .bandit  .coveragerc  .gitignore  BEAUTIFUL_SOUP_IMPLEMENTATION.md  BROWSER_ANALYSIS_SUMMARY.md  BROWSER_ENHANCEMENTS.md  CHANGELOG.md  CONFIGURATION_SYSTEM_IMPLEMENTATION.md  CONTRIBUTING.md  DIRECTORY_SEARCH_IMPLEMENTATION.md  ENHANCED_CONFIG_COMPLETION.md  LICENSE  MANUAL.md  MILESTONE_SUMMARY.md  Makefile  PLUGIN_ARCHITECTURE_IMPLEMENTATION.md  PROJECT_OVERVIEW_ANALYSIS.md  PR_SUMMARY.md  QUICK_ACTIONS_IMPLEMENTATION.md  README.md  SECURITY.md  SESSION_MANAGEMENT_COMPLETION.md  URL_INPUT_DIALOG_IMPLEMENTATION.md  ZSH_PARSE_ERROR_FIX.md  advanced_test.py  beautifulsoup_reference.md  beautifulsoup_template.py  cleanup_cli.py  comby_examples.md  compass_reader.py  demo_browser.py  demo_enhanced_browser.py  demo_html_rendering.py  demo_search_functionality.py  demo_session_management.py  demo_url_input.py  example_api.py  fix  fix_cli.py  fix_code.py  (+25 more)
.github/: ROADMAP.md  labels.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: API.md  ARCHITECTURE.md  KEYBINDINGS.md  QUICK_REFERENCE.md  TDD_CLI.md  USER_GUIDE.md
src/modern_gopher/: cli.py  config.py  keybindings.py
src/modern_gopher/browser/: __init__.py  bookmarks.py  sessions.py  terminal.py
src/modern_gopher/content/: __init__.py  html_renderer.py
src/modern_gopher/core/: client.py  protocol.py  types.py  url.py
src/modern_gopher/gui/: __init__.py  main_window.py
src/modern_gopher/plugins/: __init__.py  base.py  manager.py  registry.py
src/modern_gopher/plugins/builtin/: __init__.py  image_handler.py  markdown_processor.py  text_cleaner.py
tests/: test_bookmarks.py  test_browser.py  test_browser_terminal.py  test_browser_terminal_advanced.py  test_browser_terminal_enhanced.py  test_browser_terminal_simplified.py  test_cli.py  test_cli_advanced_coverage.py  test_cli_comprehensive.py  test_cli_enhanced.py  test_client.py  test_config.py  test_config_comprehensive.py  test_config_edge_cases.py  test_html_renderer.py  test_integration.py  test_keybindings.py  test_my_feature.py  test_plugins_base_complete.py  test_plugins_base_enhanced.py  test_plugins_image_handler.py  test_plugins_manager.py  test_plugins_markdown.py  test_plugins_text_cleaner.py  test_protocol.py  test_sessions.py  test_types.py  test_types_enhanced.py  test_url_enhanced.py  test_url_parsing.py
